Bug 393797 - Falkon is stuck in FullScreen when tab with fullscreen video is closed with keyboard shortcut (CTRL + W)
Summary: Falkon is stuck in FullScreen when tab with fullscreen video is closed with k...
Status: RESOLVED FIXED
Alias: None
Product: Falkon
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: David Rosca
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-05-03 10:36 UTC by Juraj
Modified: 2018-05-03 11:46 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.0.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Juraj 2018-05-03 10:36:36 UTC
Hello,
Falkon  is stuck in FullScreen when tab with fullscreen video is closed with keyboard shortcut (CTRL + W).

Steps how to reproduce:
- Go to some page with HTML5 video (i tested on youtube and some others)
- Open video and enable its fullscreen mode (play video in fullscreen)
- Close tab with keyboard shortcut (CTRL + W)
- You Should be stuck in fullscreen mode with no panels, F11 is useless here
- The way to gey out of this situation is to open video in fullscreen and exit fullscreen

What should happen:
- When closing current tab with fullscreen video the fullscreen mode should be disabled
- Or keyboard shortcut F11 (toogle fullscreen) should work even in video fullscreen
Comment 1 David Rosca 2018-05-03 11:46:07 UTC
Git commit 9375b474bac5cf91546cd7451d7043f8307f7a26 by David Rosca.
Committed on 03/05/2018 at 11:41.
Pushed by drosca into branch 'Falkon/3.0'.

BrowserWindow: Track webview that initiated html fullscreen

Fixes issue where it wouldn't be possible to leave fullscreen
with F11 shortcut after closing webview that was in html fullscreen.
FIXED-IN: 3.0.1

M  +5    -6    src/lib/app/browserwindow.cpp
M  +2    -2    src/lib/app/browserwindow.h
M  +1    -1    src/lib/webtab/tabbedwebview.cpp

https://commits.kde.org/falkon/9375b474bac5cf91546cd7451d7043f8307f7a26