BrowserWindow: Track webview that initiated html fullscreen

Fixes issue where it wouldn't be possible to leave fullscreen
with F11 shortcut after closing webview that was in html fullscreen.

BUG: 393797
FIXED-IN: 3.0.1